Create start screen html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,40 @@
 <!-------------------------- -->
 
          <div class="row-3">
-           <p>ROW 3</p>
+
+           <div class="card8 flip-container" ontouchstart="this.classList.toggle('hover');">
+ 	          <div class="flipper">
+ 	          	<div class="front">
+ 		       	    <p>FRONT OF CARD</p>
+ 	           	</div>
+ 		          <div class="back">
+ 			          <p>BACK OF CARD</p>
+ 		          </div>
+ 	          </div>
+           </div>
+
+           <div class="card9 flip-container" ontouchstart="this.classList.toggle('hover');">
+ 	          <div class="flipper">
+ 	          	<div class="front">
+ 		       	    <p>FRONT OF CARD</p>
+ 	           	</div>
+ 		          <div class="back">
+ 			          <p>BACK OF CARD</p>
+ 		          </div>
+ 	          </div>
+           </div>
+
+           <div class="card10 flip-container" ontouchstart="this.classList.toggle('hover');">
+ 	          <div class="flipper">
+ 	          	<div class="front">
+ 		       	    <p>FRONT OF CARD</p>
+ 	           	</div>
+ 		          <div class="back">
+ 			          <p>BACK OF CARD</p>
+ 		          </div>
+ 	          </div>
+           </div>
+
          </div>
 
         </div>
