--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="player-inputs">
           <div class="player-1-container">
             <label>Player 1</label>
-            <input type="text" class="input-player-1">
+            <input type="text" class="input-player-1" maxlength=32>
           </div>
           <div class="player-2-container">
             <label>Player 2</label>
