--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="rules-screen">
-        <p class="welcome-players-text">Welcome Player 1 and Player 2!</p>
+        <p class="welcome-players-text">Welcome <span></span>!</p>
         <p class="game-rules">The goal of the game is to find all 5 pairs of cards as quickly as possible. The player that finds the greatest numbers of pairs, wins.</p>
         <p class="game-rules">To begin playing, the player whose name is highlighted can click any card in the card pile. It will flip over and reveal a picture. Click another card. If they match, they will disappear and you will have completed a match! If they don’t, you’ll have THREE seconds to look at them before they flip back over. Then it’s time for the other player to try!</p>
         <p class="game-rules">After you play, you’ll see the name of the final winner and how long it took to win the game.</p>
