--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="player-1-container">
             <label>Player 1</label>
             <input type="text" class="input-player-1" maxlength=32>
-            <p class="p1-error-message">YOU MUST ENTER A PLAYER NAME BEFORE CONTINUING</p>
+            <p class="p1-error-message">PLEASE ENTER A PLAYER NAME BEFORE CONTINUING</p>
           </div>
           <div class="player-2-container">
             <label>Player 2</label>
@@ -31,8 +31,11 @@
       </div>
       <div class="rules-screen">
         <p class="welcome-players-text">Welcome <span></span>!</p>
+        <p class="game-rules"> ~ </p>
         <p class="game-rules">The goal of the game is to find all 5 pairs of cards as quickly as possible. The player that finds the greatest numbers of pairs, wins.</p>
+        <p class="game-rules"> ~ </p>
         <p class="game-rules">To begin playing, the player whose name is highlighted can click any card in the card pile. It will flip over and reveal a picture. Click another card. If they match, they will disappear and you will have completed a match! If they don’t, you’ll have THREE seconds to look at them before they flip back over. Then it’s time for the other player to try!</p>
+        <p class="game-rules"> ~ </p>
         <p class="game-rules">After you play, you’ll see the name of the final winner and how long it took to win the game.</p>
         <button type="button" class="play-game-button2">START GAME</button>
           <!-- ^^ need to use .toUpperCase method in JS -->
