Add img file for card back

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="card1 flip-container" ontouchstart="this.classList.toggle('hover');">
 	          <div class="flipper">
 	          	<div class="front">
-		       	    <p>FRONT OF CARD</p>
+		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
 	           	</div>
 		          <div class="back">
 			          <p>BACK OF CARD</p>
@@ -79,7 +79,7 @@
           <div class="card2 flip-container" ontouchstart="this.classList.toggle('hover');">
 	          <div class="flipper">
 	          	<div class="front">
-		       	    <p>FRONT OF CARD</p>
+		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
 	           	</div>
 		          <div class="back">
 			          <p>BACK OF CARD</p>
@@ -90,7 +90,7 @@
           <div class="card3 flip-container" ontouchstart="this.classList.toggle('hover');">
 	          <div class="flipper">
 	          	<div class="front">
-		       	    <p>FRONT OF CARD</p>
+		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
 	           	</div>
 		          <div class="back">
 			          <p>BACK OF CARD</p>
@@ -105,7 +105,7 @@
            <div class="card4 flip-container" ontouchstart="this.classList.toggle('hover');">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <p>FRONT OF CARD</p>
+ 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
  			          <p>BACK OF CARD</p>
@@ -116,7 +116,7 @@
            <div class="card5 flip-container" ontouchstart="this.classList.toggle('hover');">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <p>FRONT OF CARD</p>
+ 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
  			          <p>BACK OF CARD</p>
@@ -127,7 +127,7 @@
            <div class="card6 flip-container" ontouchstart="this.classList.toggle('hover');">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <p>FRONT OF CARD</p>
+ 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
  			          <p>BACK OF CARD</p>
@@ -138,7 +138,7 @@
            <div class="card7 flip-container" ontouchstart="this.classList.toggle('hover');">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <p>FRONT OF CARD</p>
+ 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
  			          <p>BACK OF CARD</p>
@@ -153,7 +153,7 @@
            <div class="card8 flip-container" ontouchstart="this.classList.toggle('hover');">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <p>FRONT OF CARD</p>
+ 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
  			          <p>BACK OF CARD</p>
@@ -164,7 +164,7 @@
            <div class="card9 flip-container" ontouchstart="this.classList.toggle('hover');">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <p>FRONT OF CARD</p>
+ 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
  			          <p>BACK OF CARD</p>
@@ -175,7 +175,7 @@
            <div class="card10 flip-container" ontouchstart="this.classList.toggle('hover');">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <p>FRONT OF CARD</p>
+ 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
  			          <p>BACK OF CARD</p>
