--- a/index.html
+++ b/index.html
@@ -65,35 +65,35 @@
 
          <div class="row-1">
 
-          <div class="card1 flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="card card1 flip-container">
 	          <div class="flipper">
 	          	<div class="front">
-		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+		       	    <img class ="card1 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
 	           	</div>
 		          <div class="back">
-			          <p>BACK OF CARD</p>
+			          <img class ="card1 front-of-card" src="./images/card_01.png" alt="blue flower">
 		          </div>
 	          </div>
           </div>
 
-          <div class="card2 flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="card card2 flip-container">
 	          <div class="flipper">
 	          	<div class="front">
-		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+		       	    <img class ="card2 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
 	           	</div>
 		          <div class="back">
-			          <p>BACK OF CARD</p>
+			          <img class ="card2 front-of-card" src="./images/card_02.png" alt="mushroom">
 		          </div>
 	          </div>
           </div>
 
-          <div class="card3 flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="card card3 flip-container">
 	          <div class="flipper">
 	          	<div class="front">
-		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+		       	    <img class ="card3 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
 	           	</div>
 		          <div class="back">
-			          <p>BACK OF CARD</p>
+			          <img class ="card3 front-of-card" src="./images/card_03.png" alt="purple flower">
 		          </div>
 	          </div>
           </div>
@@ -102,46 +102,46 @@
 
          <div class="row-2">
 
-           <div class="card4 flip-container" ontouchstart="this.classList.toggle('hover');">
+           <div class="card card4 flip-container">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+ 		       	    <img class ="card4 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
- 			          <p>BACK OF CARD</p>
+ 			          <img class ="card4 front-of-card" src="./images/card_03.png" alt="purple flower">
  		          </div>
  	          </div>
            </div>
 
-           <div class="card5 flip-container" ontouchstart="this.classList.toggle('hover');">
+           <div class="card card5 flip-container">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+ 		       	    <img class ="card5 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
- 			          <p>BACK OF CARD</p>
+ 			          <img class ="card5 front-of-card" src="./images/card_04.png" alt="helicopter mushroom">
  		          </div>
  	          </div>
            </div>
 
-           <div class="card6 flip-container" ontouchstart="this.classList.toggle('hover');">
+           <div class="card card6 flip-container">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+ 		       	    <img class ="card6 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
- 			          <p>BACK OF CARD</p>
+ 			          <img class ="card6 front-of-card" src="./images/card_05.png" alt="blue shell">
  		          </div>
  	          </div>
            </div>
 
-           <div class="card7 flip-container" ontouchstart="this.classList.toggle('hover');">
+           <div class="card card7 flip-container">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+ 		       	    <img class ="card7 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
- 			          <p>BACK OF CARD</p>
+ 			          <img class ="card7 front-of-card" src="./images/card_02.png" alt="mushroom">
  		          </div>
  	          </div>
            </div>
@@ -150,35 +150,35 @@
 
          <div class="row-3">
 
-           <div class="card8 flip-container" ontouchstart="this.classList.toggle('hover');">
+           <div class="card card8 flip-container">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+ 		       	    <img class ="card8 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
- 			          <p>BACK OF CARD</p>
+ 			          <img class ="card8 front-of-card" src="./images/card_01.png" alt="blue flower">
  		          </div>
  	          </div>
            </div>
 
-           <div class="card9 flip-container" ontouchstart="this.classList.toggle('hover');">
+           <div class="card card9 flip-container">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+ 		       	    <img class ="card9 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
- 			          <p>BACK OF CARD</p>
+ 			          <img class ="card9 front-of-card" src="./images/card_05.png" alt="blue shell">
  		          </div>
  	          </div>
            </div>
 
-           <div class="card10 flip-container" ontouchstart="this.classList.toggle('hover');">
+           <div class="card card10 flip-container">
  	          <div class="flipper">
  	          	<div class="front">
- 		       	    <img class ="front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
+ 		       	    <img class ="card10 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
  	           	</div>
  		          <div class="back">
- 			          <p>BACK OF CARD</p>
+ 			          <img class ="card10 front-of-card" src="./images/card_04.png" alt="helicopter mushroom">
  		          </div>
  	          </div>
            </div>
