Modify class names

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="p1-game-board">
 
           <div class="name-heading">
-            <p class="player-name">PLAYER 1</p>
+            <p class="player-name p1-name"></p>
           </div>
 
           <div class="matches-heading">
