--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Which Super Mario?</title>
+    <title>Super Mario Memory Match</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=McLaren&display=swap" rel="stylesheet">
   </head>
@@ -63,7 +63,7 @@
 
          <div class="row-1">
 
-          <div class="card card1 flip-container">
+          <div class="card card1 flip-container" data="card1">
 	          <div class="flipper">
 	          	<div class="front">
 		       	    <img class ="card1 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -74,7 +74,7 @@
 	          </div>
           </div>
 
-          <div class="card card2 flip-container">
+          <div class="card card2 flip-container" data="card2">
 	          <div class="flipper">
 	          	<div class="front">
 		       	    <img class ="card2 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -85,7 +85,7 @@
 	          </div>
           </div>
 
-          <div class="card card3 flip-container">
+          <div class="card card3 flip-container" data="card3">
 	          <div class="flipper">
 	          	<div class="front">
 		       	    <img class ="card3 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -100,7 +100,7 @@
 
          <div class="row-2">
 
-           <div class="card card4 flip-container">
+           <div class="card card4 flip-container" data="card4">
  	          <div class="flipper">
  	          	<div class="front">
  		       	    <img class ="card4 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -111,7 +111,7 @@
  	          </div>
            </div>
 
-           <div class="card card5 flip-container">
+           <div class="card card5 flip-container" data="card5">
  	          <div class="flipper">
  	          	<div class="front">
  		       	    <img class ="card5 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -122,7 +122,7 @@
  	          </div>
            </div>
 
-           <div class="card card6 flip-container">
+           <div class="card card6 flip-container" data="card6">
  	          <div class="flipper">
  	          	<div class="front">
  		       	    <img class ="card6 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -133,7 +133,7 @@
  	          </div>
            </div>
 
-           <div class="card card7 flip-container">
+           <div class="card card7 flip-container" data="card7">
  	          <div class="flipper">
  	          	<div class="front">
  		       	    <img class ="card7 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -148,7 +148,7 @@
 
          <div class="row-3">
 
-           <div class="card card8 flip-container">
+           <div class="card card8 flip-container" data="card8">
  	          <div class="flipper">
  	          	<div class="front">
  		       	    <img class ="card8 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -159,7 +159,7 @@
  	          </div>
            </div>
 
-           <div class="card card9 flip-container">
+           <div class="card card9 flip-container" data="card9">
  	          <div class="flipper">
  	          	<div class="front">
  		       	    <img class ="card9 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
@@ -170,7 +170,7 @@
  	          </div>
            </div>
 
-           <div class="card card10 flip-container">
+           <div class="card card10 flip-container" data="card10">
  	           <div class="flipper">
  	             <div class="front">
  		       	     <img class ="card10 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
