--- a/index.html
+++ b/index.html
@@ -61,127 +61,67 @@
 
         <div class="card-area">
 
-         <div class="row-1">
+          <div class="row-1">
 
-          <div class="card card1 flip-container" data="card1">
-	          <div class="flipper">
-	          	<div class="front">
-		       	    <img class ="card1 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
-	           	</div>
-		          <div class="back">
-			          <img class ="card1 front-of-card" src="./images/card_01.png" alt="blue flower">
-		          </div>
-	          </div>
-          </div>
+            <div class="card card1" data="card1">
+         	    <img class ="c1 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+  	          <img class ="c1 card-face" src="./images/card_01.png" alt="blue flower">
+            </div>
 
-          <div class="card card2 flip-container" data="card2">
-	          <div class="flipper">
-	          	<div class="front">
-		       	    <img class ="card2 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
-	           	</div>
-		          <div class="back">
-			          <img class ="card2 front-of-card" src="./images/card_02.png" alt="mushroom">
-		          </div>
-	          </div>
-          </div>
+            <div class="card card2" data="card2">
+         	    <img class ="c2 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+  	          <img class ="c2 card-face" src="./images/card_02.png" alt="blue flower">
+            </div>
 
-          <div class="card card3 flip-container" data="card3">
-	          <div class="flipper">
-	          	<div class="front">
-		       	    <img class ="card3 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
-	           	</div>
-		          <div class="back">
-			          <img class ="card3 front-of-card" src="./images/card_03.png" alt="purple flower">
-		          </div>
-	          </div>
-          </div>
+            <div class="card card3" data="card3">
+         	    <img class ="c3 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+  	          <img class ="c3 card-face" src="./images/card_03.png" alt="blue flower">
+            </div>
 
           </div>
 
-         <div class="row-2">
+           <div class="row-2">
 
-           <div class="card card4 flip-container" data="card4">
- 	          <div class="flipper">
- 	          	<div class="front">
- 		       	    <img class ="card4 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
- 	           	</div>
- 		          <div class="back">
- 			          <img class ="card4 front-of-card" src="./images/card_03.png" alt="purple flower">
- 		          </div>
- 	          </div>
-           </div>
+             <div class="card card4" data="card4">
+               <img class ="c4 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+               <img class ="c4 card-face" src="./images/card_01.png" alt="blue flower">
+             </div>
 
-           <div class="card card5 flip-container" data="card5">
- 	          <div class="flipper">
- 	          	<div class="front">
- 		       	    <img class ="card5 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
- 	           	</div>
- 		          <div class="back">
- 			          <img class ="card5 front-of-card" src="./images/card_04.png" alt="helicopter mushroom">
- 		          </div>
- 	          </div>
-           </div>
+             <div class="card card5" data="card5">
+               <img class ="c5 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+               <img class ="c5 card-face" src="./images/card_02.png" alt="blue flower">
+             </div>
 
-           <div class="card card6 flip-container" data="card6">
- 	          <div class="flipper">
- 	          	<div class="front">
- 		       	    <img class ="card6 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
- 	           	</div>
- 		          <div class="back">
- 			          <img class ="card6 front-of-card" src="./images/card_05.png" alt="blue shell">
- 		          </div>
- 	          </div>
-           </div>
+             <div class="card card6" data="card6">
+               <img class ="c6 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+               <img class ="c6 card-face" src="./images/card_03.png" alt="blue flower">
+             </div>
 
-           <div class="card card7 flip-container" data="card7">
- 	          <div class="flipper">
- 	          	<div class="front">
- 		       	    <img class ="card7 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
- 	           	</div>
- 		          <div class="back">
- 			          <img class ="card7 front-of-card" src="./images/card_02.png" alt="mushroom">
- 		          </div>
- 	          </div>
-           </div>
+             <div class="card card7" data="card7">
+               <img class ="c7 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+               <img class ="c7 card-face" src="./images/card_04.png" alt="blue flower">
+             </div>
 
-         </div>
+          </div>
 
-         <div class="row-3">
+          <div class="row-3">
 
-           <div class="card card8 flip-container" data="card8">
- 	          <div class="flipper">
- 	          	<div class="front">
- 		       	    <img class ="card8 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
- 	           	</div>
- 		          <div class="back">
- 			          <img class ="card8 front-of-card" src="./images/card_01.png" alt="blue flower">
- 		          </div>
- 	          </div>
-           </div>
+            <div class="card card8" data="card8">
+              <img class ="c8 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+              <img class ="c8 card-face" src="./images/card_01.png" alt="blue flower">
+            </div>
 
-           <div class="card card9 flip-container" data="card9">
- 	          <div class="flipper">
- 	          	<div class="front">
- 		       	    <img class ="card9 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
- 	           	</div>
- 		          <div class="back">
- 			          <img class ="card9 front-of-card" src="./images/card_05.png" alt="blue shell">
- 		          </div>
- 	          </div>
-           </div>
+            <div class="card card9" data="card9">
+              <img class ="c9 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+              <img class ="c9 card-face" src="./images/card_02.png" alt="blue flower">
+            </div>
 
-           <div class="card card10 flip-container" data="card10">
- 	           <div class="flipper">
- 	             <div class="front">
- 		       	     <img class ="card10 front-of-card" src="./images/mario_card_back.jpg" alt="mario bricks">
- 	           	 </div>
- 		           <div class="back">
- 			           <img class ="card10 front-of-card" src="./images/card_04.png" alt="helicopter mushroom">
- 		           </div>
- 	           </div>
-           </div>
+            <div class="card card10" data="card10">
+              <img class ="c10 card-back" src="./images/mario_card_back.jpg" alt="mario bricks">
+              <img class ="c10 card-face" src="./images/card_03.png" alt="blue flower">
+            </div>
 
-         </div>
+          </div>
 
         </div>
 
