--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
         <div class="card-area">
 
-          <div class="row-1">
+          <!-- <div class="row-1">
           </div>
 
           <div class="row-2">
           </div>
 
           <div class="row-3">
-          </div>
+          </div> -->
 
         </div>
 
