Move script tags

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="matches-heading">
             <p class="up-case">matches</p>
             <p class="up-case">this round</p>
-            <p class="p1-score">0</p>
+            <p class="p1-score"></p>
           </div>
 
           <div class="high-score-heading">
@@ -60,16 +60,6 @@
         </div>
 
         <div class="card-area">
-
-          <!-- <div class="row-1">
-          </div>
-
-          <div class="row-2">
-          </div>
-
-          <div class="row-3">
-          </div> -->
-
         </div>
 
         <div class="p2-game-board">
