Add winner message

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         </div>
 
         <div class="card-area">
+          <p class="winner-message hidden">you win!</p>
         </div>
 
         <div class="p2-game-board">
