Remove second player

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <div class="player-1-container">
             <label>Player 1</label>
             <input type="text" class="input-player-1" maxlength=32>
-            <p class="p1-error-message">please enter player names before continuing</p>
+            <p class="p1-error-message">please enter player name before continuing</p>
           </div>
           <div class="player-2-container">
             <label>Player 2</label>
-            <input type="text" class="input-player-2" maxlength=32>
+            <input type="text" class="input-player-2" maxlength=32 placeholder="2 Player Coming Soon!">
           </div>
         </div>
         <div class="play-game-button-container">
@@ -29,13 +29,13 @@
         </div>
       </div>
       <div class="rules-screen">
-        <p class="welcome-players-text">Welcome <span class="p1-span"></span> & <span class="p2-span"></span> !</p>
+        <p class="welcome-players-text">Welcome <span class="p1-span"></span>!</p>
         <p class="game-rules"> ~ </p>
-        <p class="game-rules">The goal of the game is to find all 5 pairs of cards as quickly as possible. The player that finds the greatest numbers of pairs, wins.</p>
+        <p class="game-rules">The goal of the game is to find all 5 pairs of cards as quickly as possible.</p>
         <p class="game-rules"> ~ </p>
-        <p class="game-rules">To begin playing, the player whose name is highlighted can click any card in the card pile. It will flip over and reveal a picture. Click another card. If they match, they will disappear and you will have completed a match! If they don’t, you’ll have THREE seconds to look at them before they flip back over. Then it’s time for the other player to try!</p>
+        <p class="game-rules">To begin playing, click on any brick card. It will flip over and reveal a picture. Now, click another card. If they match, they will disappear and you will have completed a match! If they don’t, you’ll have THREE seconds to look at them before they flip back over.</p>
         <p class="game-rules"> ~ </p>
-        <p class="game-rules">After you play, you’ll see the name of the final winner and how long it took to win the game.</p>
+        <p class="game-rules">After you play, you’ll see how long it took you to finish the game. Try plaing again and beating your previous high score!</p>
         <button type="button" class="play-game-button2">start game</button>
       </div>
       <section class="game-play-contianer">
@@ -65,7 +65,7 @@
 
         <div class="p2-game-board">
 
-          <div class="name-heading">
+          <!-- <div class="name-heading">
             <p class="p2-name"></p>
           </div>
 
@@ -79,7 +79,7 @@
             <p class="up-case">game wins</p>
             <p class="up-case">round one</p>
             <p class="up-case">00.00 seconds</p>
-          </div>
+          </div> -->
 
         </div>
     </div>
