Remove winning message

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         </div>
 
         <div class="card-area">
-          <p class="winner-message hidden">you win!</p>
+          <!-- <p class="winner-message hidden">you win!</p>
+          <p class="winner-message hidden">It took you 2min 3sec to finish!</p> -->
         </div>
 
         <div class="p2-game-board">
