--- a/index.html
+++ b/index.html
@@ -60,27 +60,12 @@
         </div>
 
         <div class="card-area">
-          <!-- <p class="winner-message hidden">you win!</p>
-          <p class="winner-message hidden">It took you 2min 3sec to finish!</p> -->
+    
         </div>
 
         <div class="p2-game-board">
 
-          <!-- <div class="name-heading">
-            <p class="p2-name"></p>
-          </div>
-
-          <div class="matches-heading">
-            <p class="up-case">matches</p>
-            <p class="up-case">this round</p>
-            <p class="p2-score">0</p>
-          </div>
-
-          <div class="high-score-heading">
-            <p class="up-case">game wins</p>
-            <p class="up-case">round one</p>
-            <p class="up-case">00.00 seconds</p>
-          </div> -->
+         <button class="start-new-game-button" type="button">Start a New Game</button>
 
         </div>
     </div>
