--- a/index.html
+++ b/index.html
@@ -33,40 +33,31 @@
         <p class="game-rules"> ~ </p>
         <p class="game-rules">The goal of the game is to find all 5 pairs of cards as quickly as possible.</p>
         <p class="game-rules"> ~ </p>
-        <p class="game-rules">To begin playing, click on any brick card. It will flip over and reveal a picture. Now, click another card. If they match, they will disappear and you will have completed a match! If they don’t, you’ll have THREE seconds to look at them before they flip back over.</p>
+        <p class="game-rules">To begin playing, click on any brick card. It will flip over and reveal a picture. Now, click another card. If they match, they will disappear and you will have completed a match! If they don’t, you’ll have TWO seconds to look at them before they flip back over.</p>
         <p class="game-rules"> ~ </p>
         <p class="game-rules">After you play, you’ll see how long it took you to finish the game. Try plaing again and beating your previous high score!</p>
         <button type="button" class="play-game-button2">start game</button>
       </div>
       <section class="game-play-contianer">
         <div class="p1-game-board">
-
           <div class="name-heading">
             <p class="p1-name"></p>
           </div>
-
           <div class="matches-heading">
             <p class="up-case">matches</p>
             <p class="up-case">this round</p>
             <p class="p1-score"></p>
           </div>
-
           <div class="high-score-heading">
             <p class="up-case">game wins</p>
             <p class="up-case">round one</p>
-            <p class="up-case">00.00 seconds</p>
+            <p class="up-case">feature coming soon!</p>
           </div>
-
+          <button class="start-new-game-button" type="button">Start New Game</button>
         </div>
-
         <div class="card-area">
-    
         </div>
-
         <div class="p2-game-board">
-
-         <button class="start-new-game-button" type="button">Start a New Game</button>
-
         </div>
     </div>
   </section>
