Add mobile layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="add-players-screen">
         <div class="player-inputs">
           <div class="player-1-container">
-            <label>Player 1</label>
+            <label>Name</label>
             <input type="text" class="input-player-1" maxlength=32>
             <p class="p1-error-message">please enter player name before continuing</p>
           </div>
@@ -35,7 +35,7 @@
         <p class="game-rules"> ~ </p>
         <p class="game-rules">To begin playing, click on any brick card. It will flip over and reveal a picture. Now, click another card. If they match, they will disappear and you will have completed a match! If they don’t, you’ll have TWO seconds to look at them before they flip back over.</p>
         <p class="game-rules"> ~ </p>
-        <p class="game-rules">After you play, you’ll see how long it took you to finish the game. Try plaing again and beating your previous high score!</p>
+        <p class="game-rules">After you play, you’ll see how long it took you to finish the game. Try playing again and beating your previous high score!</p>
         <button type="button" class="play-game-button2">start game</button>
       </div>
       <section class="game-play-contianer">
@@ -49,9 +49,9 @@
             <p class="p1-score"></p>
           </div>
           <div class="high-score-heading">
-            <p class="up-case">game wins</p>
-            <p class="up-case">round one</p>
-            <p class="up-case">feature coming soon!</p>
+            <p class="up-case">try to find</p>
+            <p class="up-case">as many matches</p>
+            <p class="up-case">as you can!</p>
           </div>
           <button class="start-new-game-button" type="button">Start New Game</button>
         </div>
